# TaskMaster

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
src/controllers/: TaskController.cpp  TaskController.h
src/database/: Database.cpp  Database.hpp
src/models/: Task.h
src/repositories/: TaskRepository.cpp  TaskRepository.h
src/services/: TaskService.cpp  TaskService.h
tests/: CMakeLists.txt  test_crud.py
tests/test_crow/: CMakeLists.txt  test_crow.cpp
tests/test_hello/: CMakeLists.txt  test_hello.cpp
